[package]
name = "monaco"
version = "0.20.0"
authors = ["Simon Berger <simon@siku2.io>"]
edition = "2018"
exclude = ["/build/"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["embed_workers"]
embed_workers = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
js-sys = "0.3"
paste = "1.0"
wasm-bindgen = "0.2"
yew = { version = "0.17", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "HtmlElement",
    "KeyboardEvent",
    "MouseEvent",
    "Url",
    "Window",
    "Worker"
]
