[package]
name = "monaco"
version = "0.20.0"
authors = ["Simon Berger <simon@siku2.io>"]
edition = "2018"
description = "wasm-bindgen bindings for the Monaco text editor."
readme = "README.md"
repository = "https://github.com/siku2/rust-monaco"
license = "MIT OR Apache-2.0"
keywords = ["monaco", "wasm-bindgen"]
categories = ["api-bindings", "text-editors", "web-programming", "wasm"]
exclude = ["/build/", "/ts2rs/"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["workers"]
api = ["serde", "wasm-bindgen/serde-serialize"]
workers = []
yew-components = ["api", "yew"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
js-sys = "0.3"
paste = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
wasm-bindgen = "0.2"
yew = { version = "0.17", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "HtmlElement",
    "KeyboardEvent",
    "MouseEvent",
    "Url",
    "Window",
    "Worker"
]
