[package]
name = "monaco"
version = "0.1.0"
authors = ["Simon Berger <simon@siku2.io>"]
edition = "2018"
description = "Rust WASM bindings for the Monaco Editor"
readme = "README.md"
repository = "https://github.com/siku2/rust-monaco"
license = "MIT OR Apache-2.0"
keywords = ["monaco", "wasm-bindgen"]
categories = ["api-bindings", "text-editors", "web-programming", "wasm"]
exclude = ["/build/", "/ts2rs/"]

[package.metadata.docs.rs]
all-features = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["api", "workers"]
api = []
workers = []
yew-components = ["api", "yew"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
js-sys = "0.3"
paste = "1.0"
wasm-bindgen = "0.2"
yew = { version = "0.17", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "Blob",
    "HtmlElement",
    "KeyboardEvent",
    "MouseEvent",
    "Url",
    "Window",
    "Worker"
]
