[package]
name = "ts2rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
swc_common = "*"
swc_ecma_ast = "0.110.0"
swc_ecma_codegen = "0.146.1"
swc_ecma_parser = "0.141.1"
swc_ecma_visit = "0.96.0"
swc_ecma_transforms_base = "0.134.2"
log = "0.4"
env_logger = "0.10"
convert_case = "0.6.0"