[package]
name = "ts2rsv3"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
swc_common = "*"
swc_ecma_ast = "0.109.1"
swc_ecma_codegen = "0.144.2"
swc_ecma_parser = "0.139.1"
swc_ecma_visit = "0.95.1"
swc_ecma_transforms_base = "0.132.4"
log = "0.4"
env_logger = "0.10"
convert_case = "0.6.0"