[package]
name = "yew_events_external"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
monaco = { path = "../..", features = ["yew-components"] }
wasm-bindgen = "0.2"
yew = { version = "0.20", features = ["csr"] }

# Used for the randomess, not needed usually.
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
